Fixed alignment of image wall

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -29,6 +29,7 @@ body {
 }
 ul.polaroid {
   margin: 2em auto;
+  padding: 0;
   li {
     position: relative;
     display: inline-block;
